# FARIS_code

./: README.md  package.xml  setup.cfg  setup.py
RobotController/: .RotationalMotor.py.swp  AdjustCamera.py  Camera.py  CameraNode.py  CameraNodeBackend.py  Motor.py  MotorController.py  RotationalMotor.py  SampleNode.py  Subscriber.py  YOLO_node.py  distanceFronObjNode.py  test.py
RobotController.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
RobotController/Nodes/: Motor.py  MotorController.py  Nodes.md  RotationalMotor.py  Subscriber.py  UserInputNode.py  YOLO_node.py  auto_move.py  distanceFronObjNode.py
RobotController/testFiles/: .encoderAI.py.swp  AI2.py  encodeOneVal.py  encoderAI.py  encoderTesting.py  test.py
install/: local_setup.sh  setup.sh
install/RobotController/lib/RobotController/: listener  node
install/RobotController/share/RobotController/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/RobotController/share/RobotController/launch/: FARIS_launch.py
launch/: FARIS_launch.py
launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/log/: latest_build
log/: latest_build
