<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>RobotController</name>
  <version>1.0.0</version>
  <description>package desc</description>
  <maintainer email="aidan@todo.todo">aidan</maintainer>
  <license>Apache License 2.0</license>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
	  <build_type>ament_python</build_type>
	  <depend>rclcpp</depend>
	  <depend>std_msgs</depend>
	  <depend>bounding_box</depend>
  </export>
</package>
